Bug 358266 - After trying to reload a session, kate doesn't display anything at all
Summary: After trying to reload a session, kate doesn't display anything at all
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: sessions (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR grave
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
: 363134 363273 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-01-20 17:24 UTC by lea_prevot
Modified: 2016-09-07 15:27 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: Applications 16.08
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description lea_prevot 2016-01-20 17:24:26 UTC
I opened Kate, tried to reload a session containing multiple files and a splitted view, and nothing was displayed at all (the whole window is gray except for the menu). The issue doesn't go away when restarting Kate.

Reproducible: Didn't try

Steps to Reproduce:
1. Save a session with multiple files and a splitted view
2. Close Kate
3. Open Kate and reload the previous session

Actual Results:  
Nothing is displayed and Kate is unusable.

Expected Results:  
Open the session.
Comment 1 Dominik Haumann 2016-06-13 12:19:58 UTC
Git commit 863e98662b584c137bb0f224d43bba724108667c by Dominik Haumann.
Committed on 13/06/2016 at 12:19.
Pushed by dhaumann into branch 'master'.

Avoid hidden view spaces on start
REVIEW: 128173

M  +27   -0    kate/kateviewmanager.cpp
M  +1    -0    kate/kateviewmanager.h

http://commits.kde.org/kate/863e98662b584c137bb0f224d43bba724108667c
Comment 2 Dominik Haumann 2016-06-13 12:21:05 UTC
This is not backported to 16.04 yet, since I would like to avoid regressions in the stable branch.
Comment 3 Christoph Cullmann 2016-09-07 14:49:01 UTC
*** Bug 363134 has been marked as a duplicate of this bug. ***
Comment 4 Christoph Cullmann 2016-09-07 15:27:46 UTC
*** Bug 363273 has been marked as a duplicate of this bug. ***