Avoid hidden view spaces on start

BUG: 358266
REVIEW: 128173